manifests/health-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: health
  name: health
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: health
    spec:
      containers:
      - image: dlvrchris/health
        name: health
        ports:
        - containerPort: 5000
          hostPort: 5000
        resources: {}
        stdin: true
        tty: true
      restartPolicy: Always
status: {}
