manifests/health-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: health
  name: health
spec:
  ports:
  - name: "health"
    port: 80
    targetPort: 5000
  selector:
    io.kompose.service: health
status:
  loadBalancer: {}
